welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: type mismatch;
 found   : Boolean(true)
 required: Int
    return true
           ^countTeen:6: error: type mismatch;
 found   : Boolean(true)
 required: Int
    return true
           ^countTeen:9: error: type mismatch;
 found   : Boolean(true)
 required: Int
    return true
           ^countTeen:12: error: type mismatch;
 found   : Boolean(true)
 required: Int
    return true
           ^countTeen:13: error: type mismatch;
 found   : Boolean(false)
 required: Int
  }else{return false}
               ^